--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-navbar></app-navbar>
+
+<sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
+
+  <!--<sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>-->
+
+</sebm-google-map>
