Added Info window and marker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,15 @@
 
 <sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
 
-  <!--<sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>-->
+  <sebm-google-map-marker [latitude]="lat" [longitude]="lng">
+
+    <sebm-google-map-info-window>
+        <strong>Titulo</strong>
+        <p>
+            Plaza de San Sebastian
+        </p>
+        </sebm-google-map-info-window>
+
+  </sebm-google-map-marker>
 
 </sebm-google-map>
