--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,34 @@
 <app-navbar></app-navbar>
 
-<sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
 
-  <sebm-google-map-marker [latitude]="lat" [longitude]="lng">
+<div class="container main-container">
 
-    <sebm-google-map-info-window>
-        <strong>Titulo</strong>
-        <p>
-            Plaza de San Sebastian
-        </p>
-        </sebm-google-map-info-window>
+    <div class="row">
 
-  </sebm-google-map-marker>
+        <div class="col-md-3">
+            <h3>Marcador</h3>
+        </div>
+        <div class="col-md-9">
 
-</sebm-google-map>
+            <sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
+
+            <sebm-google-map-marker [latitude]="lat" [longitude]="lng">
+
+                <sebm-google-map-info-window>
+                    <strong>Titulo</strong>
+                    <p>
+                        Plaza de San Sebastian
+                    </p>
+                    </sebm-google-map-info-window>
+
+                </sebm-google-map-marker>
+
+            </sebm-google-map>
+
+        </div>
+
+    </div>
+
+</div>
+
+
