--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,24 @@
 <app-navbar></app-navbar>
 
 
-<div class="container main-container">
+<div class="container main-container animated fadeIn fast">
 
     <div class="row">
 
         <div class="col-md-3">
-            <div *ngIf="marcadorShell">
+            <div *ngIf="!marcadorShell" class="animated fadeIn fast">
+                <div class="alert alert-info" role="alert">
+                    <strong>Haga click</strong> en el mapa para crear un marcador o selecione uno.
+                </div>
+            </div>
+            <div *ngIf="marcadorShell" class="animated fadeIn fast">
                 <h3>Marcador</h3>
                 <hr>
                 <form [formGroup]="marcador_forma">
                     <div class="form-group">
                         <label>Nombre del marcador</label>
                         <input formControlName="titulo"
-                            type="text" class="form-control" placeholder="Nombre">
+                            type="text" class="form-control" placeholder="Nuevo Marcador">
                     </div>
                     <div class="form-group">
                         <label>Descripcion</label>
